# android-mcp-server

./: .gitignore  README.md  README_kr.md  adbdevicemanager.py  apktoolmanager.py  apkutils.py  baselinemanager.py  config.yaml.example  fridamanager.py  imagerender.py  jadxmanager.py  networkmanager.py  pyproject.toml  readiness.py  repackagemanager.py  screenmirror.py  server.py  start.cmd  start.ps1  staticmanager.py
docs/: DEPLOYMENT.md  TOOLS.md
frida_presets/: ssl-unpin.js
scripts/: 0-setup_environment.ps1  1-setup_frida_server.ps1  2-register_claude_desktop.ps1  3-run_server.ps1  4-run_inspector.ps1  align_frida.py  mitm_addon.py
skills/: malware-report-renderer.skill
skills/android-analysis/: SKILL.md
skills/malware-analysis/: SKILL.md  report-template.md
skills/malware-report-renderer/: SKILL.md  example_report.md
skills/malware-report-renderer/assets/: report.css
skills/malware-report-renderer/scripts/: render_report.py
skills/renef/: SKILL.md  SOURCE.md
tests/: test_adb_device_manager.py  test_adb_extra.py  test_apktool_manager.py  test_apkutils.py  test_baseline_manager.py  test_ca_and_readiness.py  test_frida_manager.py  test_image_render.py  test_integration.py  test_jadx_manager.py  test_network_manager.py  test_repackage_manager.py  test_screen_mirror.py  test_server_settings.py  test_static_manager.py
